# PyTorch-learn

./: .gitignore  00_quickstart.ipynb  01_tensors.ipynb  02_datasets&dataloaders.ipynb  03_Transforms.ipynb  04_build-nn.ipynb  05_autograd.ipynb  06_optimizing-model-paramters.ipynb  07_save-load-model.ipynb  README.md
libtorch/test1/: CMakeLists.txt  libtorch_trace.cpp
libtorch/test2/: CMakeLists.txt  libtorch_tensor.cpp
